tweak slides for 2017

--- a/slides/lecture01.tex
+++ b/slides/lecture01.tex
@@ -166,14 +166,13 @@ By the end of the week, you should be able to\dots
 
 \frame{
 
-\frametitle{Schedule of Five Sessions}
+\frametitle{Schedule of Four Sessions}
 
 \begin{enumerate}\itemsep0.5em
 \item Survey Experiments in Context
 \item Examples and Paradigms
 \item External Validity
-\item Sources of Heterogeneity
-\item Lingering Issues
+\item Practical Issues
 \end{enumerate}
 
 }
@@ -242,7 +241,7 @@ Oxford English Dictionary defines ``experiment'' as:
 
 \frame{
 
-\frametitle{In Political Science I}
+\frametitle{In Social Science I}
 
 \begin{itemize}\itemsep0.5em
 \item APSA Pres. A. Lawrence Lowell (1922):\\
@@ -257,13 +256,16 @@ Oxford English Dictionary defines ``experiment'' as:
 
 \frame{
 
-\frametitle{{\large In Political Science II}}
+\frametitle{{\large In Social Science II}}
 
 \small
 
 \begin{itemize}
 \item Rise of surveys in the behavioral revolution
 \item Survey research was not experimental because interviewing was still mostly paper-based
+	\begin{itemize}
+	\item ``Split Ballots'' (Schuman \& Presser; Bishop)
+	\end{itemize}
 \item<2-> 1983: Merrill Shanks and the Berkeley Survey Research Center develop CATI
 \item<3-> Mid-1980s: Paul Sniderman \& Tom Piazza performed the first survey experiment\only<3->{\footnote{Sniderman, Paul M., and Thomas Piazza. 1993. \textit{The Scar of Race}. Cambridge, MA: Harvard University Press.}}
 	\begin{itemize}\footnotesize
