--- a/slides/lecture02.tex
+++ b/slides/lecture02.tex
@@ -199,60 +199,9 @@ These days, Democrats and Republicans differ from one another considerably. The 
 
 
 
-% Talk about protocol and preregistration
-
-\frame{
-
-\frametitle{Protocol}
-
-Protocol is the complete planning document for how to design, implement, and analyze an experiment.\footnote{Thomas J. Leeper. 2011. ``The Use of Protocol in the Design and Reporting of Experiments.'' \textit{The Experimental Political Scientist}.}
-
-}
-
-\frame{
-
-\frametitle{{\normalsize Protocol}}
 
 
-\small
-
-\begin{enumerate}\itemsep-0.2em
-\item Theory/hypotheses
-\item Instrumentation
-	\begin{itemize}
-	\item Manipulation(s)
-	\item Outcome(s)
-	\item Covariate(s)
-	\item Manipulation check(s)
-	\end{itemize}
-\item Sampling
-\item Implementation
-\item Analysis
-\end{enumerate}
-}
-
-\frame{
-
-\frametitle{Why bother?}
-
-\begin{itemize}\itemsep0.5em
-\item<2-> Be clear to yourself what you're trying to do before you do it
-\item<3-> Assess the literature for best practices
-\item<4-> Highlight areas in need of pilot testing
-\item<5-> Economize questionnaire development
-\item<6-> Study preregistration
-\end{itemize}
-
-}
-
-\questions
-
-
-
-
-
-
-\subsection[Examples]{Common Paradigms and Examples}
+\section[Examples]{Common Paradigms and Examples}
 \frame{\tableofcontents[currentsection,subsubsectionstyle=hide]}
 
 
@@ -638,7 +587,7 @@ With the passage of the Patriot Act in 2001, the FBI can now enter your home, se
 \item Standalone or embedded in a text or question
 \item<2-> Examples
 	\begin{itemize}\footnotesize
-	\item<2-> Kalmoe \& Gross\footnote{``Cueing Patriotism, Prejudice, and Partisanship in the Age of Obama: Experimental Tests of U.S. Flag Imagery Effects in Presidential Elections.'' \textit{Political Psychology}: in press.} measure impact of patriotic cues on candidate support by showing images of candidates with and without flags
+	\item<2-> Kalmoe \& Gross\footnote{2016. ``Cueing Patriotism, Prejudice, and Partisanship in the Age of Obama: Experimental Tests of U.S. Flag Imagery Effects in Presidential Elections.'' \textit{Political Psychology}.} measure impact of patriotic cues on candidate support by showing images of candidates with and without flags
 	\item<3-> Subliminal primes possible, depending on software
 	\item<4-> Lots of recent examples of facial manipulation
 	\end{itemize}
@@ -646,6 +595,27 @@ With the passage of the Patriot Act in 2001, the FBI can now enter your home, se
 \end{itemize}
 
 }
+
+
+\frame{
+
+\frametitle{Example\footnote{Kalmoe \& Gross. 2016. ``Cueing Patriotism, Prejudice, and Partisanship in the Age of Obama: Experimental Tests of U.S. Flag Imagery Effects in Presidential Elections.'' \textit{Political Psychology}.}}
+
+
+\begin{center}
+\includegraphics[width=\textwidth]{images/KalmoeGross1}
+
+\vspace{1em}
+
+\includegraphics[width=.8\textwidth]{images/KalmoeGross2}
+
+\end{center}
+
+
+
+}
+
+
 
 \frame{
 
@@ -820,7 +790,7 @@ A recent proposal \only<2>{\textbf{by the Taliban}} calls for the sweeping refor
 \begin{quote}\large
 The best criterion for evaluating the quality of an experiment is whether it manipulated the intended independent variable and controlled everything else by design.
 \end{quote}
-\onslide<2->{\small\hspace{5em} --Thomas J. Leeper (5 July 2016)}
+\onslide<2->{\small\hspace{5em} --Thomas J. Leeper (6 July 2017)}
 
 }
 
