--- a/slides/lecture03.tex
+++ b/slides/lecture03.tex
@@ -1551,6 +1551,58 @@ This is much more problematic because it involves controlling for a \textit{post
 \againframe<2->{posttreatment2}
 
 
+\frame{}
+
+% Talk about protocol and preregistration
+
+\frame{
+
+\frametitle{Protocol}
+
+Protocol is the complete planning document for how to design, implement, and analyze an experiment.\footnote{Thomas J. Leeper. 2011. ``The Use of Protocol in the Design and Reporting of Experiments.'' \textit{The Experimental Political Scientist}.}
+
+}
+
+\frame{
+
+\frametitle{{\normalsize Protocol}}
+
+
+\small
+
+\begin{enumerate}\itemsep-0.2em
+\item Theory/hypotheses
+\item Instrumentation
+	\begin{itemize}
+	\item Manipulation(s)
+	\item Outcome(s)
+	\item Covariate(s)
+	\item Manipulation check(s)
+	\end{itemize}
+\item Sampling
+\item Implementation
+\item Analysis
+\end{enumerate}
+}
+
+\frame{
+
+\frametitle{Why bother?}
+
+\begin{itemize}\itemsep0.5em
+\item<2-> Be clear to yourself what you're trying to do before you do it
+\item<3-> Assess the literature for best practices
+\item<4-> Highlight areas in need of pilot testing
+\item<5-> Economize questionnaire development
+\item<6-> Study preregistration
+\end{itemize}
+
+}
+
+\questions
+
+
+
 \questions
 
 
