update day 2 slides

--- a/slides/lecture03.tex
+++ b/slides/lecture03.tex
@@ -10,31 +10,6 @@
 
 \frame{
 
-\frametitle{Review}
-
-What techniques can we use to assess whether a treatment manipulated what we wanted it to and did not manipulate what we didn't want it to?
-
-}
-
-\frame{
-
-\frametitle{Review}
-
-What are some of the available paradigms for implementing a survey experiment?
-
-}
-
-\frame{
-
-\frametitle{Review}
-
-What is an experimental protocol document and why is it useful?
-
-}
-
-
-\frame{
-
 \frametitle{Share your TESS Examples}
 
 In groups of 4--5, share your TESS examples
@@ -50,10 +25,10 @@ Take about 7--8 minutes.
 
 
 
-\frame{\tableofcontents}
+\frame{\tableofcontents[subsubsectionstyle=hide]}
 
 \section[External Validity]{External Validity of a Sample}
-\frame{\tableofcontents[currentsection]}
+\frame{\tableofcontents[currentsection,subsubsectionstyle=hide]}
 
 \frame{
 
@@ -121,7 +96,7 @@ What makes an experiment (or any research study) generalizable? What does it mea
 
 
 \subsection{Design-based}
-\frame{\tableofcontents[currentsection, currentsubsection]}
+\frame{\tableofcontents[currentsection, currentsubsection, subsubsectionstyle=hide]}
 
 \frame{
 
@@ -306,7 +281,7 @@ Shadish, Cook, and Campbell tell us to think about:
 
 
 \subsection{Model-based}
-\frame{\tableofcontents[currentsection, currentsubsection]}
+\frame{\tableofcontents[currentsection, currentsubsection, subsubsectionstyle=hide]}
 
 \frame{
 
@@ -616,7 +591,7 @@ Stratum & Nat'l & Sample & Loan & DREAM 1 & DREAM 2 & Rally \\% & Rally (Distant
 \questions
 
 \section[SUTO]{Other Notions of External Validity}
-\frame{\tableofcontents[currentsection]}
+\frame{\tableofcontents[currentsection,subsubsectionstyle=hide]}
 
 
 \frame{
@@ -2097,24 +2072,6 @@ With a partner, brainstorm how one or more these behavioural measures might be a
 \end{itemize}
 }
 
-
-\frame{
-\frametitle{{\large KnowledgeNetworks versus YouGov}}
-\begin{itemize}\itemsep1em
-\item Big debate in early 2000s about online panels
-	\begin{itemize}
-	\item KN used ABS to build a representative panel
-	\item YouGov created an opt-in panel; used ``sample matching''
-	\end{itemize}
-\item<2-> YouGov's process:
-	\begin{itemize}
-	\item Randomly sample from a list
-	\item Match each sampled individual to someone in their opt-in panel
-	\item Survey the matched individuals
-	\end{itemize}
-\item<3-> Evidence inconclusive but many think KN approach is better
-\end{itemize}
-}
 
 
 \frame{
