--- a/2017-eui.md
+++ b/2017-eui.md
@@ -6,10 +6,10 @@ description: "Survey experiments have emerged as one of the most powerful method
 
 # {{ page.title }}
 
-A one-day workshop at the Europen University Institute (Florence, Italy; 18 January 2017).
+A one-day workshop at the European University Institute (Florence, Italy; 18 January 2017).
 
  - [Slides](slides/EUI2017.pdf)
- - [R Code for Activites](activities/EUI2017.R)
+ - [R Code for Activities](activities/EUI2017.R)
  - Papers
    - [Holbrook and Krosnick](activities/holbrook/Holbrook, Krosnick (POQ, 2010).pdf)
    - [Schuldt et al.](activities/schuldt/Schuldt, Konrath, Schwarz (POQ, 2011).pdf)
