--- a/slides/Leuven2018.tex
+++ b/slides/Leuven2018.tex
@@ -290,7 +290,7 @@ Hadley Cantril (1940) asks 3000 Americans either:
 \end{itemize}
 \end{column}
 \begin{column}[t]{.5\textwidth}
-\onslide<3->{Do you think the U.S. should do more than it is now doing to help England and France in their fight against Hitler?
+\onslide<3->{Do you think the U.S. should do more than it is now doing to help England and France \textcolor{red}{in their fight against Hitler}?
 \begin{itemize}
 \item Yes\onslide<5->{: 22\%}
 \item No
