--- a/slides/lecture03.tex
+++ b/slides/lecture03.tex
@@ -29,7 +29,7 @@ Take about 7--8 minutes.
 
 \frametitle{Groupwork}
 
-In \textbf{new} groups of 4--5, develop a survey experiment
+In the same group, develop a survey experiment
 \begin{itemize}
 \item What's your research question?
 \item What is/are your hypotheses?
@@ -52,11 +52,12 @@ Presentations 14:45--15:45
 
 \frametitle{Discussion}
 
+\begin{itemize}
+\item What was enjoyable about this exercise?
+\item What was challenging about it?
+\item What do you still want to know?
+\end{itemize}
+
 }
-
-\frame{}
-
-\appendix
-\frame{}
 
 \end{document}
